General colours changed

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  background: linear-gradient(to right, rgba(198,236,224,1) 0%, rgba(123,204,182,0.93) 100%);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(233,148,188,0.48829954345019255) 88%);
 }
 
