--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,12 +5,13 @@
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
     vertical-align: middle;
+    max-width: 20vw;
   }
   
   .column img {
     margin-top: 1px;
     vertical-align: middle;
-    max-width: 20vw;
+    width: 100%;
   }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
